[gd_scene load_steps=35 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://theme.theme" type="Theme" id=2]
[ext_resource path="res://RusLat.tscn" type="PackedScene" id=3]
[ext_resource path="res://shaders/2. negative.shader" type="Shader" id=4]
[ext_resource path="res://Gamepad.tscn" type="PackedScene" id=5]
[ext_resource path="res://SoundPanel2.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/SourceCodePro-Regular.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://ShaderPanel.tscn" type="PackedScene" id=8]
[ext_resource path="res://TextureButton2.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/shader-icon.png" type="Texture" id=10]
[ext_resource path="res://OnScreenKeyboard.tscn" type="PackedScene" id=11]
[ext_resource path="res://assets/tape-black-small-vec1.png" type="Texture" id=12]
[ext_resource path="res://ScopePanel.tscn" type="PackedScene" id=13]
[ext_resource path="res://MemoryView.tscn" type="PackedScene" id=14]
[ext_resource path="res://assets/debugger-bowser.png" type="Texture" id=15]
[ext_resource path="res://NiceTooltip.tscn" type="PackedScene" id=16]
[ext_resource path="res://assets/floppy-icon.png" type="Texture" id=17]

[sub_resource type="StyleBoxFlat" id=33]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="ShaderMaterial" id=34]
shader = ExtResource( 4 )

[sub_resource type="AudioStreamGenerator" id=35]
mix_rate = 48000.0
buffer_length = 0.1

[sub_resource type="StyleBoxFlat" id=36]
bg_color = Color( 0.439216, 0.419608, 0.407843, 0.905882 )
corner_radius_top_left = 5
corner_radius_top_right = 5
shadow_size = 10
shadow_offset = Vector2( 0, -10 )

[sub_resource type="StyleBoxFlat" id=37]
bg_color = Color( 0.627451, 0.611765, 0.6, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10

[sub_resource type="Shader" id=48]
code = "shader_type canvas_item;

const float PI = 3.1415926535;

uniform float power: hint_range(0., 100.) = 20.0;
uniform float speed: hint_range(0., 10.) = 0.5;

void fragment() {
	vec4 color = texture(TEXTURE, UV);
	float b = sin(mod(0.001 * FRAGCOORD.x - TIME * speed, PI));
	b = pow(b, power);
	vec3 r = vec3(b, b, b);
	COLOR = vec4(r, color.a);
}"

[sub_resource type="ShaderMaterial" id=47]
shader = SubResource( 48 )
shader_param/power = 70.0
shader_param/speed = 0.878

[sub_resource type="DynamicFontData" id=49]
font_path = "res://assets/Monoid-Regular.ttf"

[sub_resource type="DynamicFont" id=50]
size = 8
extra_spacing_space = -2
font_data = SubResource( 49 )

[sub_resource type="DynamicFont" id=39]
size = 12
outline_size = 1
use_filter = true
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=40]

[sub_resource type="StyleBoxFlat" id=45]
content_margin_left = 0.0
bg_color = Color( 0.0470588, 0.0470588, 0.0470588, 0.607843 )
border_width_right = 1
border_width_bottom = 1
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=32]
draw_center = false
border_color = Color( 0, 0, 0, 0.619608 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="AtlasTexture" id=41]
flags = 5
atlas = ExtResource( 15 )
region = Rect2( 175, 15, 150, 150 )

[sub_resource type="StreamTexture" id=46]
flags = 5
load_path = "res://.import/bootrom-icon.png-409740fd48ea5633c08291789acb780a.stex"

[sub_resource type="StyleBoxFlat" id=42]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color( 0.168627, 0.168627, 0.168627, 0 )
corner_radius_top_left = 10
corner_radius_top_right = 10

[sub_resource type="StyleBoxFlat" id=43]
content_margin_left = 0.0
bg_color = Color( 0.0470588, 0.0470588, 0.0470588, 0.607843 )
border_width_right = 1
border_width_bottom = 1
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_bottom = 5.0

[node name="main" type="Panel"]
margin_right = 800.0
margin_bottom = 640.0
theme = ExtResource( 2 )
custom_styles/panel = SubResource( 33 )
script = ExtResource( 1 )

[node name="VectorScreen" type="TextureRect" parent="."]
material = SubResource( 34 )
margin_left = 7.0
margin_top = 7.0
margin_right = 793.0
margin_bottom = 633.0
rect_min_size = Vector2( 80, 64 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="FileDialog" type="FileDialog" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 13.0
margin_top = 32.0
margin_right = -15.0
margin_bottom = -42.0
rect_min_size = Vector2( 250, 87.5 )
window_title = "Открыть файл"
resizable = true
mode_overrides_title = false
mode = 3
access = 2
filters = PoolStringArray( "*.rom,*.r0m,*.vec,*.bin,*.fdd,*.wav" )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = SubResource( 35 )

[node name="ResumeTimer" type="Timer" parent="."]

[node name="ClickTimer" type="Timer" parent="."]

[node name="shader_select_panel" parent="." instance=ExtResource( 8 )]
visible = false
margin_left = 200.0
margin_top = 10.0
margin_right = 600.0
margin_bottom = 110.0
size_flags_horizontal = 1
custom_styles/panel = SubResource( 36 )

[node name="HUD" type="Panel" parent="."]
margin_right = 800.0
margin_bottom = 250.0
custom_styles/panel = SubResource( 37 )

[node name="HomeLabel" type="Label" parent="HUD"]
modulate = Color( 0, 0, 0, 0.596078 )
material = SubResource( 47 )
margin_left = 397.0
margin_top = 231.0
margin_right = 782.0
margin_bottom = 244.0
mouse_filter = 0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 50 )
text = "v06x by svofski | debugger by parallelno  https://github.com/svofski/v06x"
align = 2

[node name="ScopePanel" parent="HUD" instance=ExtResource( 13 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 74.0
margin_top = 7.0
margin_right = 681.0
margin_bottom = 39.0
rect_min_size = Vector2( 607, 32 )

[node name="RusLabel" type="Label" parent="HUD"]
margin_left = 24.0
margin_top = 5.0
margin_right = 62.0
margin_bottom = 21.0
custom_colors/font_color = Color( 0, 0, 0, 0.247059 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 0.223529 )
custom_constants/shadow_offset_x = 13
custom_constants/shadow_as_outline = 2
custom_fonts/font = SubResource( 39 )
text = "РУС"

[node name="RusLat" parent="HUD" instance=ExtResource( 3 )]
margin_left = 19.0
margin_top = 13.0
margin_right = 51.0
margin_bottom = 45.0
mouse_filter = 1
size_flags_horizontal = 0
custom_fonts/font = SubResource( 40 )

[node name="ButtonsPanel" type="Panel" parent="HUD"]
margin_left = 6.0
margin_top = 45.0
margin_right = 67.0
margin_bottom = 226.0
custom_styles/panel = SubResource( 45 )

[node name="ShaderSelectButton" parent="HUD" instance=ExtResource( 9 )]
margin_left = 21.0
margin_top = 137.0
margin_right = 49.0
margin_bottom = 165.0
rect_min_size = Vector2( 28, 28 )
custom_styles/panel = SubResource( 32 )
texture = ExtResource( 10 )

[node name="BowserButton" parent="HUD" instance=ExtResource( 9 )]
margin_left = 16.0
margin_top = 175.0
margin_right = 58.0
margin_bottom = 214.0
hint_tooltip = "Базырь"
custom_styles/panel = SubResource( 32 )
texture = SubResource( 41 )

[node name="LoadAss2" parent="HUD" instance=ExtResource( 9 )]
margin_left = 11.0
margin_top = 52.0
margin_right = 59.0
margin_bottom = 84.0
hint_tooltip = "ROM/WAV/FDD A:"
custom_styles/panel = SubResource( 32 )
texture = ExtResource( 12 )

[node name="LoadAssBoot" parent="HUD" instance=ExtResource( 9 )]
margin_left = 81.0
margin_top = 227.0
margin_right = 113.0
margin_bottom = 249.0
rect_min_size = Vector2( 32, 22 )
hint_tooltip = "ROM/WAV/FDD A:"
custom_styles/panel = SubResource( 32 )
texture = SubResource( 46 )

[node name="LoadAssBashook" parent="HUD" instance=ExtResource( 9 )]
visible = false
margin_left = 144.0
margin_top = 227.0
margin_right = 176.0
margin_bottom = 249.0
rect_min_size = Vector2( 32, 22 )
hint_tooltip = "ROM/WAV/FDD A:"
custom_styles/panel = SubResource( 32 )
texture = SubResource( 46 )

[node name="LoadAss3" parent="HUD" instance=ExtResource( 9 )]
margin_left = 19.0
margin_top = 93.0
margin_right = 51.0
margin_bottom = 125.0
hint_tooltip = "FDD B:"
custom_styles/panel = SubResource( 32 )
texture = ExtResource( 17 )

[node name="GamepadLabel" parent="HUD" instance=ExtResource( 5 )]
margin_left = 20.0
margin_top = 226.0
margin_right = 48.0
margin_bottom = 248.0
rect_min_size = Vector2( 28, 22 )

[node name="OnScreenKeyboard" parent="HUD" instance=ExtResource( 11 )]
margin_left = 73.0
margin_top = 45.0
margin_right = 685.0
margin_bottom = 225.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 42 )

[node name="SoundPanel" parent="HUD" instance=ExtResource( 6 )]
margin_left = 696.0
margin_top = 17.0
margin_right = 786.0
margin_bottom = 221.0
rect_min_size = Vector2( 80, 204 )
custom_styles/panel = SubResource( 43 )

[node name="DebugView" parent="." instance=ExtResource( 14 )]
visible = false
margin_bottom = 470.0
size_flags_horizontal = 2

[node name="NiceTooltip" parent="." instance=ExtResource( 16 )]
visible = false

[node name="RageTimer" type="Timer" parent="."]

[connection signal="gui_input" from="." to="." method="_on_main_gui_input"]
[connection signal="dir_selected" from="FileDialog" to="." method="_on_FileDialog_dir_selected"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
[connection signal="popup_hide" from="FileDialog" to="." method="_on_FileDialog_popup_hide"]
[connection signal="aspect_ratio_selected" from="shader_select_panel" to="." method="_on_aspect_ratio_selected"]
[connection signal="pixel_scale_selected" from="shader_select_panel" to="." method="_on_pixel_scale_selected"]
[connection signal="selected" from="shader_select_panel" to="." method="_on_shader_selected"]
[connection signal="gui_input" from="HUD/HomeLabel" to="." method="_on_HomeLabel_gui_input"]
[connection signal="mouse_entered" from="HUD/HomeLabel" to="." method="_on_HomeLabel_mouse_entered"]
[connection signal="mouse_exited" from="HUD/HomeLabel" to="." method="_on_HomeLabel_mouse_exited"]
[connection signal="long_hover" from="HUD/ScopePanel" to="." method="_on_ScopePanel_long_hover"]
[connection signal="pressed" from="HUD/ScopePanel" to="." method="_on_ScopePanel_pressed"]
[connection signal="pressed" from="HUD/ShaderSelectButton" to="." method="_on_shaderselect_pressed"]
[connection signal="mouse_entered" from="HUD/BowserButton" to="." method="_on_BowserButton_mouse_entered" binds= [ 0 ]]
[connection signal="mouse_exited" from="HUD/BowserButton" to="." method="_on_BowserButton_mouse_entered" binds= [ 1 ]]
[connection signal="pressed" from="HUD/BowserButton" to="." method="_on_BowserButton_pressed"]
[connection signal="pressed" from="HUD/LoadAss2" to="." method="_on_load_asset_pressed" binds= [ 0 ]]
[connection signal="pressed" from="HUD/LoadAssBoot" to="." method="_on_load_asset_pressed" binds= [ 2 ]]
[connection signal="pressed" from="HUD/LoadAssBashook" to="." method="_on_load_asset_pressed" binds= [ 2 ]]
[connection signal="pressed" from="HUD/LoadAss3" to="." method="_on_load_asset_pressed" binds= [ 1 ]]
[connection signal="volumes_changed" from="HUD/SoundPanel" to="." method="_on_SoundPanel_volumes_changed"]
